--- a/db-api/package.json
+++ b/db-api/package.json
@@ -11,6 +11,7 @@
     "dependencies": {
         "@types/express": "^4.17.12",
         "@types/mongodb": "^3.6.16",
+        "body-parser": "^1.19.0",
         "commonjs": "^0.0.1",
         "express": "^4.17.1",
         "mongodb": "^3.6.9"
