--- a/ui/package.json
+++ b/ui/package.json
@@ -31,6 +31,7 @@
     "eslint-plugin-prettier": "^3.4.0",
     "font-awesome": "^4.7.0",
     "ng-pick-datetime": "^7.0.0",
+    "ngx-clipboard": "14.0.2",
     "prettier": "^2.3.2",
     "prettier-eslint": "^12.0.0",
     "rxjs": "~6.6.0",
