--- a/ui/package.json
+++ b/ui/package.json
@@ -29,6 +29,7 @@
     "eslint": "^7.31.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-prettier": "^3.4.0",
+    "export-to-csv": "^0.2.1",
     "font-awesome": "^4.7.0",
     "ng-pick-datetime": "^7.0.0",
     "ngx-clipboard": "14.0.2",
@@ -44,7 +45,7 @@
     "@angular/compiler-cli": "~10.1.0",
     "@types/jasmine": "~3.5.0",
     "@types/jasminewd2": "~2.0.3",
-    "@types/node": "^12.11.1",
+    "@types/node": "^17.0.29",
     "codelyzer": "^6.0.0",
     "jasmine-core": "~3.6.0",
     "jasmine-spec-reporter": "~5.0.0",
