--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,6 +14,6 @@ jobs:
         with:
           node-version: 18.10.0
       - name: Install dependencies
-        run: npm install
+        run: npm install --legacy-peer-deps
       - name: "Run Tests"
         run: npm test
