--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,4 +16,4 @@ jobs:
       - name: Install dependencies
         run: npm install --legacy-peer-deps
       - name: "Run Tests"
-        run: npm test
+        run: npm run test:ci
