--- a/ui/package.json
+++ b/ui/package.json
@@ -6,6 +6,7 @@
     "start": "ng serve",
     "build": "ng build",
     "test": "jest && ng test",
+    "test:ci": "jest && ng test --browsers=ChromeHeadless --watch=false",
     "lint": "tsc --noEmit && eslint . --ext js,ts,json --quiet --fix",
     "e2e": "ng e2e"
   },
