--- a/ui/package.json
+++ b/ui/package.json
@@ -13,19 +13,19 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "^15.2.10",
-    "@angular/cdk": "^12.2.5",
+    "@angular/cdk": "^15.2.0",
     "@angular/common": "^15.2.10",
     "@angular/compiler": "^15.2.10",
     "@angular/core": "^15.2.10",
     "@angular/forms": "^15.2.10",
-    "@angular/material": "11.2.3",
+    "@angular/material": "^15.2.0",
     "@angular/platform-browser": "^15.2.10",
     "@angular/platform-browser-dynamic": "^15.2.10",
     "@angular/router": "^15.2.10",
-    "@fortawesome/angular-fontawesome": "^0.7.0",
+    "@fortawesome/angular-fontawesome": "^0.12.0",
     "@fortawesome/fontawesome-svg-core": "^1.2.36",
     "@fortawesome/free-solid-svg-icons": "^5.15.4",
-    "@ng-bootstrap/ng-bootstrap": "^10.0.0",
+    "@ng-bootstrap/ng-bootstrap": "^14.0.0",
     "@typescript-eslint/eslint-plugin": "^4.28.4",
     "eslint": "^7.31.0",
     "eslint-config-prettier": "^8.3.0",
@@ -33,7 +33,7 @@
     "export-to-csv": "^0.2.1",
     "font-awesome": "^4.7.0",
     "ng-pick-datetime": "^7.0.0",
-    "ngx-clipboard": "14.0.2",
+    "ngx-clipboard": "16.0.0",
     "prettier": "^2.3.2",
     "prettier-eslint": "^12.0.0",
     "rxjs": "~6.6.0",
@@ -49,13 +49,13 @@
     "@types/jest": "^29.5.2",
     "@types/node": "^17.0.29",
     "codelyzer": "^6.0.0",
-    "jasmine-core": "~3.6.0",
+    "jasmine-core": "~4.1.0",
     "jasmine-spec-reporter": "~5.0.0",
     "jest": "^29.5.0",
     "karma": "~6.4.2",
     "karma-chrome-launcher": "~3.1.0",
     "karma-coverage-istanbul-reporter": "~3.0.2",
-    "karma-jasmine": "~4.0.0",
+    "karma-jasmine": "~5.0.0",
     "karma-jasmine-html-reporter": "^1.5.0",
     "protractor": "~7.0.0",
     "ts-jest": "^29.1.0",
