--- a/ui/package.json
+++ b/ui/package.json
@@ -19,6 +19,7 @@
     "@angular/core": "^15.2.10",
     "@angular/forms": "^15.2.10",
     "@angular/material": "^15.2.0",
+    "@angular/material-moment-adapter": "^15.2.9",
     "@angular/platform-browser": "^15.2.10",
     "@angular/platform-browser-dynamic": "^15.2.10",
     "@angular/router": "^15.2.10",
@@ -32,7 +33,6 @@
     "eslint-plugin-prettier": "^3.4.0",
     "export-to-csv": "^0.2.1",
     "font-awesome": "^4.7.0",
-    "ng-pick-datetime": "^7.0.0",
     "ngx-clipboard": "16.0.0",
     "prettier": "^2.3.2",
     "prettier-eslint": "^12.0.0",
