--- a/db-api/package.json
+++ b/db-api/package.json
@@ -3,17 +3,22 @@
     "version": "1.0.0",
     "description": "db-api for Personal Chart Project",
     "main": "index.ts",
-    "scripts": {},
+    "scripts": {
+        "test": "jest"
+    },
     "devDependencies": {
         "@types/node": "^15.6.0",
         "typescript": "^4.2.4"
     },
     "dependencies": {
         "@types/express": "^4.17.12",
+        "@types/jest": "^29.5.12",
         "@types/mongodb": "^3.6.16",
         "body-parser": "^1.19.0",
         "commonjs": "^0.0.1",
         "express": "^4.17.1",
-        "mongodb": "^6.6.2"
+        "jest": "^29.7.0",
+        "mongodb": "^6.6.2",
+        "ts-jest": "^29.1.5"
     }
 }
