--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,3 +17,18 @@ jobs:
         run: npm install
       - name: "Run Tests"
         run: npm run test:ci
+  test-db-api:
+    runs-on: ubuntu-latest
+    defaults:
+      run:
+        working-directory: ./db-api
+    steps:
+      - uses: actions/checkout@v1
+      - name: Use Node.js 18.10.0
+        uses: actions/setup-node@v1
+        with:
+          node-version: 18.10.0
+      - name: Install dependencies
+        run: npm install
+      - name: "Run Tests"
+        run: npm run test
