--- a/ui/tsconfig.json
+++ b/ui/tsconfig.json
@@ -19,6 +19,8 @@
       "es2018",
       "dom"
     ],
+    "noUnusedLocals": true,
+    "noUnusedParameters": true,
     "useDefineForClassFields": false
   }
 }
